--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "typescript": "^4.9.5",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1"
     }
