--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.51.0",
+        "@typescript-eslint/parser": "^5.51.0",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
+        "eslint": "^8.34.0",
+        "eslint-config-google": "^0.14.0",
+        "eslint-plugin-tailwindcss": "^3.8.3",
+        "eslint-plugin-vue": "^9.9.0",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
