--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "interactjs": "^1.10.17",
         "typescript": "^4.9.5",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1"
